@@ -19,6 +19,7 @@
 Incorporated High level prototypes into makefile
 Added logic to catch non-existent input files and report a useful error message
 Added DP! to stage2 forth
+Added EXECUTE to stage2 forth
 Added string print and address to output of High level prototype disassembler
 
 ** Changed
